# component_prices

./: .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yaml
backend/: Dockerfile  __init__.py  config.py
backend/api/: app.py  schemas.py  security.py
backend/api/endpoints/: auth.py  components.py
backend/api/queries/: __init__.py  component_query.py
backend/api/services/: auth.py
backend/db/: models.py  session.py
backend/db/migrations/: env.py
backend/db/repositories/: component.py
backend/scraper/: Dockerfile  main.py  scraper.py  seed.py
backend/tests/: conftest.py  test_api.py  test_integration.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package.json  prettier.config.js  stylelint.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/api/: auth.ts  client.ts  components.ts  index.ts
frontend/src/composables/: index.ts  useAuth.ts  useComponents.ts
frontend/src/router/: guards.ts  index.ts  routes.ts
frontend/src/stores/: auth.ts  components.ts  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  formatters.ts  validators.ts
migrations/: env.py
migrations/versions/: 20260620_000001_initial_schema.py
scraper/: Dockerfile  __init__.py  config.py  db.py  main.py  models.py  scraper.py  seed.py
tests/: conftest.py  test_api.py  test_db.py  test_integration.py  test_repository.py  test_scraper.py
(+13 files in other folders)
